syntax = "proto3";
package TournamentAssistantShared.Models;

option csharp_namespace = "TournamentAssistantShared.Models";

message CoreServer {
	string name = 1;
	string address = 2;
	int32 port = 3;
}