syntax = "proto3";
package TournamentAssistantShared.Models;

option csharp_namespace = "TournamentAssistantShared.Models";

import "protobuf/Models/team.proto";

message ServerSettings {
	string server_name = 1;
	string password = 2;
	bool enable_teams = 3;
	Team teams = 4;
	int32 score_update_frequency = 5;
	string banned_mods = 6;
}